--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias esse temporibus dolore maiores at, corporis voluptates aliquam adipisci. Dicta voluptates voluptatem in, ratione tempora minus, magni facere cupiditate eveniet. Possimus!</p>
 
+		<!-- promo video -->
+
+		<video controls>
+		<source src="videos/real-estate.mp4" type="video/mp4">
+		<source src="videos/real-estate.ogv" type="video/ogg">
+			Your browser does not support HTML5 video.<a href="http://browsehappy.com" target="_blank"> Please upgrade your browser.</a>
+			</video>
+
 
 
 	</body>
