--- a/index.html
+++ b/index.html
@@ -11,34 +11,48 @@
 		<title>Exceptional Realty Group - Luxury Homes - About</title>
 	</head>
 	<body>
-		<!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+		<header>
 
 		<h1>Exceptional</h1>
 		<h2>Realty Group</h2>
 
-		<!-- links -->
-		<a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+			<nav>
+				<a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+			</nav>
 
-		<img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-		
-		<!--
-		foldername/ = go inside the folder
-		filename = use a file in the current folder.
-		../ = leave the current folder and go up to the parent folder.
-		-->
+		</header>
 
-		<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Facere nulla, aliquid praesentium dolorem commodi, illo quisquam? Aspernatur cumque consectetur deleniti veniam aut, sequi, sunt quae quis magni sed explicabo minus!</p>
+		<section id="featured-property">
+			<figure>
+				<img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+				<figcaption>345 Carl Street Apt. 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards</figcaption>
+			</figure>
+			<!--
+			foldername/ = go inside the folder
+			filename = use a file in the current folder.
+			../ = leave the current folder and go up to the parent folder.
+			-->
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias esse temporibus dolore maiores at, corporis voluptates aliquam adipisci. Dicta voluptates voluptatem in, ratione tempora minus, magni facere cupiditate eveniet. Possimus!</p>
+			<p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Facere nulla, aliquid praesentium dolorem commodi, illo quisquam? Aspernatur cumque consectetur deleniti veniam aut, sequi, sunt quae quis magni sed explicabo minus!</p>
 
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias esse temporibus dolore maiores at, corporis voluptates aliquam adipisci. Dicta voluptates voluptatem in, ratione tempora minus, magni facere cupiditate eveniet. Possimus!</p>
+		</section>
+
+		<section id="promotional">
 		<!-- promo video -->
+			<figure>
+				<video controls>
+				<source src="videos/real-estate.mp4" type="video/mp4">
+				<source src="videos/real-estate.ogv" type="video/ogg">
+					Your browser does not support HTML5 video.<a href="http://browsehappy.com" target="_blank"> Please upgrade your browser.</a>
+					</video>
+					<figcaption>Exceptional Realty Group Promotional Video - Source: archive.org</figcaption>
+			<figure>
+		</section>
 
-		<video controls>
-		<source src="videos/real-estate.mp4" type="video/mp4">
-		<source src="videos/real-estate.ogv" type="video/ogg">
-			Your browser does not support HTML5 video.<a href="http://browsehappy.com" target="_blank"> Please upgrade your browser.</a>
-			</video>
-
+		<footer>
+			&copy; 2014 Exceptional Realty. All Rights Reserved.
+		</footer>
 
 
 	</body>
